# fbc_process

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/fbc_process/: __main__.py  app.py  cli.py  process.py
