[tool.poetry]
name = "fbc_process"
version = "0.1.0"
description = ""
authors = ["Athroniaeth <pierre.chaumont@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
langchain-mistralai = "^0.1.13"
gradio = "^4.43.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pytest = "^8.3.2"
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
